# langchain-foundations

./: .env.example  README.md  pyproject.toml
notebooks/module-1/: 1.1_foundational_models.ipynb  1.1_prompting.ipynb  1.2_tools.ipynb  1.2_web_search.ipynb  1.3_memory.ipynb  1.4_multimodal_messages.ipynb  1.5_personal_chef.ipynb  1.5_personal_chef.py
notebooks/module-1/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
notebooks/module-2/: 2.1_mcp.ipynb  2.2_runtime_context.ipynb  2.2_state.ipynb  2.3_multi_agent.ipynb  2.4_wedding_planners.ipynb
notebooks/module-2/resources/: 2.1_mcp_server.py
notebooks/module-3/: 3.2_managing_messages.ipynb  3.3_human_in_the_loop.ipynb  3.4_dynamic_models.ipynb  3.4_dynamic_prompts.ipynb  3.4_dynamic_tools.ipynb  3.5_email_agent.ipynb  README.md
